--- a/index.html
+++ b/index.html
@@ -25,33 +25,47 @@
     <nav class="navbar navbar-expand-lg navbar-dark border-bottom" aria-label="Fifth navbar example">
         <div class="container">
           <a class="navbar-brand col-lg-3 col-md-4 col-4" href="index.html"><img src="assets/images/logo_appsbee2.png" class="w-75" alt="logo"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler bg-red" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
     
           <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Solutions</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle active" href="#" data-bs-toggle="dropdown" aria-expanded="false">Solutions</a>
+                <ul class="dropdown-menu">
+                   <li><a href="telehealth-utah.html">Tele-health</a></li>
+                   <li><a href="logistics-solutions-utah.html">Logistics/deliver network</a></li>
+                   <li><a href="business-listing-solution-utah.html">Business listing application</a></li>
+                   <li><a href="tracking-system-utah.html">Tracking for vehicles/kids</a></li>
+                   <li><a href="ecommerce-solution-utah.html">E-commerce</a></li>
+                   <li><a href="social-network-solution-utah.html">social networking</a></li>
+                   <li><a href="cyber-security-solution-utah.html">Web security</a></li>
+                   <li><a href="machine-learning-solution-utah.html">Machine learning</a></li>
+                   <li><a href="erp-utah.html">CRM/ERP with its mobile solution</a></li>
+                   <!-- <li><a href="#">Property analytics</a></li> -->
+                   <li><a href="app-developers-utah.html">Custom application</a></li>
+                   <li><a href="IoT-solutions-utah.html"> Internet of Things (IOT)</a></li>
+                   <li><a href="dating-solution-utah.html">Dating</a></li>
+                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Technology</a>
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Technology</a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Software Product Development</a></li>
+                 <li><a href="#">Machine Learning</a></li>
+                 <li><a href="#">Blockchain</a></li>
+                 <li><a href="#">Mobile application</a></li>
+                 <li><a href="#">Cloud server architecture</a></li>
+                 <li><a href="#">Front end UI</a></li>
+                </ul>
               </li>
-              <li class="nav-item">
+
+              <li>
                 <a class="nav-link" href="#">Contact Us</a>
               </li>
-              <!-- <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li> -->
             </ul>
-            <!-- <form role="search">
-              <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-            </form> -->
             <a href="#" class="btn btn-danger rounded-pill text-uppercase bg-red text-white" role="button" aria-disabled="true">Have A PROJECT TO DISCUSS?</a>
           </div>
         </div>
@@ -62,12 +76,12 @@
 
     <!-- Main Section -->
 
-    <div class="py-5 bg-red" style="background-image: url(./assets/images/polygon_1.png); background-size: cover; background-repeat: no-repeat; background-position: center;">
+    <div class="py-lg-5 bg-red" style="background-image: url(./assets/images/polygon_1.png); background-size: cover; background-repeat: no-repeat; background-position: center;">
       <div class="p-5 text-center">
         <div class="container banner-text py-0">
           <h4>Your Extended Agile,DevOps Team<br>
             For Building Future Ready Solutions</h4>
-          <p class="col-lg-12 mx-auto lead text-white my-4">
+          <p class="col-lg-12 mx-auto lead text-white my-lg-4">
             What do you need help with</p>
         </div>
         <div class="mx-auto col-lg-4 col-12">
@@ -156,42 +170,42 @@
         <div class="row my-5">
           <div class="col-lg-4 col-md-12 col-12">
             <div class="tech-item my-5 text-center">
-              <img src="assets/icons/tech-item-1.png" class="img-fluid w-40 mb-5" alt="">
+              <img src="assets/icons/software-products-home.png" class="img-fluid w-40 mb-5" alt="">
               <h3>Software Product Development</h3>
               <p>We efficiently use Java, Swift and Flat File databases. Explore our technology!</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-12 col-12">
             <div class="tech-item my-5 text-center">
-              <img src="assets/icons/tech-item-2.png" class="img-fluid w-40 mb-5" alt="">
+              <img src="assets/icons/Machine-Learning-home.png" class="img-fluid w-40 mb-5" alt="">
               <h3>Machine Learning</h3>
               <p>Don’t just create applications make them smarter.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-12 col-12">
             <div class="tech-item my-5 text-center">
-              <img src="assets/icons/tech-item-3.png" class="img-fluid w-40 mb-5" alt="">
+              <img src="assets/icons/Blockchain-home.png" class="img-fluid w-40 mb-5" alt="">
               <h3>Blockchain</h3>
               <p>We are optimizing cost ensuring data transparency with the latest blockchain technology.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-12 col-12">
             <div class="tech-item my-5 text-center">
-              <img src="assets/icons/tech-item-4.png" class="img-fluid w-40 mb-5" alt="">
+              <img src="assets/icons/Mobile-application-home.png" class="img-fluid w-40 mb-5" alt="">
               <h3>Mobile Application</h3>
               <p>Mobile application development is close to our heart. We promise to deliver only the best.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-12 col-12">
             <div class="tech-item my-5 text-center">
-              <img src="assets/icons/tech-item-5.png" class="img-fluid w-40 mb-5" alt="">
+              <img src="assets/icons/Cloud-server-home.png" class="img-fluid w-40 mb-5" alt="">
               <h3>Cloud Server Architecture</h3>
               <p>Cloud server architecture is fairly complex and we have the best admin team to manage it efficiently.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-12 col-12">
             <div class="tech-item my-5 text-center">
-              <img src="assets/icons/tech-item-6.png" class="img-fluid w-40 mb-5" alt="">
+              <img src="assets/icons/Frontend-Development-home.png" class="img-fluid w-40 mb-5" alt="">
               <h3>Frontend UI/UX</h3>
               <p>This is all your customers will see. Make sure to use the best team to develop the frontend.</p>
             </div>
@@ -237,55 +251,55 @@
         <div class="row my-5">
           <div class="col-lg-4 col-12 border-end border-bottom">
             <div class="sol-offer-item p-3 text-center">
-              <img src="assets/icons/offer-item-1.png" class="img-fluid" alt="">
+              <img src="assets/icons/web_security.png" class="img-fluid" alt="">
               <h3>Web Security</h3>
             </div>
           </div>
           <div class="col-lg-4 col-12 border-end border-bottom">
             <div class="sol-offer-item p-3 text-center">
-              <img src="assets/icons/offer-item-2.png" class="img-fluid" alt="">
+              <img src="assets/icons/machine_learning2.png" class="img-fluid" alt="">
               <h3>Machine Larning</h3>
             </div>
           </div>
           <div class="col-lg-4 col-12 border-bottom">
             <div class="sol-offer-item p-3 text-center">
-              <img src="assets/icons/offer-item-3.png" class="img-fluid" alt="">
+              <img src="assets/icons/erp2.png" class="img-fluid" alt="">
               <h3>CRM/ERP Mobile Solution</h3>
             </div>
           </div>
           <div class="col-lg-4 col-12 border-end border-bottom">
             <div class="sol-offer-item p-3 text-center">
-              <img src="assets/icons/offer-item-4.png" class="img-fluid" alt="">
+              <img src="assets/icons/ecommerce-ico.png" class="img-fluid" alt="">
               <h3>E-Commerce</h3>
             </div>
           </div>
           <div class="col-lg-4 col-12 border-end border-bottom">
             <div class="sol-offer-item p-3 text-center">
-              <img src="assets/icons/offer-item-5.png" class="img-fluid" alt="">
+              <img src="assets/icons/custom_app.png" class="img-fluid" alt="">
               <h3>Custom Application</h3>
             </div>
           </div>
           <div class="col-lg-4 col-12 border-top border-bottom">
             <div class="sol-offer-item p-3 text-center">
-              <img src="assets/icons/offer-item-6.png" class="img-fluid" alt="">
+              <img src="assets/icons/dating.png" class="img-fluid" alt="">
               <h3>Dating Application</h3>
             </div>
           </div>
           <div class="col-lg-4 col-12 border-end">
             <div class="sol-offer-item p-3 text-center">
-              <img src="assets/icons/offer-item-7.png" class="img-fluid" alt="">
+              <img src="assets/icons/tele_health.png" class="img-fluid" alt="">
               <h3>Tele Health</h3>
             </div>
           </div>
           <div class="col-lg-4 col-12 border-end">
             <div class="sol-offer-item p-3 text-center">
-              <img src="assets/icons/offer-item-8.png" class="img-fluid" alt="">
+              <img src="assets/icons/iot2.png" class="img-fluid" alt="">
               <h3>Internet Of Things (IOT)</h3>
             </div>
           </div>
           <div class="col-lg-4 col-12">
             <div class="sol-offer-item p-3 text-center">
-              <img src="assets/icons/offer-item-9.png" class="img-fluid" alt="">
+              <img src="assets/icons/social_networking.png" class="img-fluid" alt="">
               <h3>Social Networking</h3>
             </div>
           </div>
@@ -355,7 +369,7 @@
           <div class="an-title-content">
             <div class="container footer-top-heading text-center">
               <h2>Contact Appsbee</h2>
-              <img src="assets/images/line.png">
+              <img class="w-100" src="assets/images/line.png" alt="">
               <p class="text-white mt-4">Let’s talk in more detail, here are the requirements </p>
             </div>
           </div>
@@ -393,7 +407,61 @@
 
     <!-- End Of Footer top Form Section -->
 
-    
+
+    <!-- Footer Section -->
+
+    <footer class="w-100 py-4 flex-shrink-0 footer-heading-links">
+      <div class="container py-4">
+          <div class="row">
+              <div class="col-lg-3 col-md-12 col-12 address-links text-lg-start text-center">
+                  <h3 class="text-uppercase">ADDRESS</h3>
+                  <h5>Appsbee U.S </h5>
+                  <p>3450 N. Triumph Blvd. Suite 102,Lehi Utah 84043</p>
+                  <h5>Appsbee Europe</h5>
+                  <p>Tarandės g. 34, Vilnius 14188, Lithuania</p>
+                  <h5>Appsbee India</h5>
+                  <p>Rishi Tech Park, Street No: 360, DH6/2, Newtown, Kolkata: 700156, India</p>
+                  <!-- <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Bootstrapious.com</a></p> -->
+              </div>
+              <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
+                  <h3>CASE STUDIES</h3>
+                  <ul class="list-unstyled case-links">
+                      <li><a href="#">Docsink</a></li>
+                      <li><a href="#">Amber Alert GPS</a></li>
+                      <li><a href="#">Kolkata Airport</a></li>
+                      <li><a href="#">Eptisa</a></li>
+                      <li><a href="#">Inkubate</a></li>
+                      <li><a href="#">Grid</a></li>
+                      <li><a href="#">Meri Jaan</a></li>
+                  </ul>
+              </div>
+              <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
+                  <h3>Company</h3>
+                  <ul class="list-unstyled company-links">
+                      <li><a href="#">Overview</a></li>
+                      <li><a href="#">Innovation</a></li>
+                      <li><a href="#">Management</a></li>
+                      <li><a href="#">Environment</a></li>
+                      <li><a href="#">Privacy Policy</a></li>
+                  </ul>
+              </div>
+              <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
+                  <h3 class="float-lg-start"><a class="heading-link" href="#">CAREERS</a></h3>
+                  <h3 class="float-lg-end"><a class="heading-link" href="#">BLOG</a></h3>
+                  <h3 class="mt-lg-5 pt-lg-5">DOWNLOAD</h3>
+                  <p class="text-muted"><a class="text-black" href="#">CLIENT IDEAS SHEET</a></p>
+              </div>
+          </div>
+      </div>
+    </footer>
+    <!-- End Of Footer Section -->
+    <div class="footer-bottom bg-light py-3">
+      <div class="container">
+        <img class="w-auto me-3" src="assets/images/apps_img-footer.png"> 2009 - 2023 Appsbee. All Rights Reserved.
+      </div>
+    </div>
+
+
 
     <!--  Optional JavaScript -->
     <script src="assets/js/jquery-3.6.3.min.js"></script>
