pages updated commit

--- a/logistics-solutions-utah.html
+++ b/logistics-solutions-utah.html
@@ -116,44 +116,44 @@
             <div class="container">
                 <h2 class="text-start text-capitalize position-relative d-inline-block decoration-line">How Do We Ensure Smooth And Hassle-Free Delivery Of Products?</h2>
                 <div class="row my-4">
-                    <div class="col-lg-3 col-md-12 col-12">
+                    <div class="col-lg-4 col-md-12 col-12">
                         <div class="tele-sol-item my-4 text-center">
                             <img src="assets/icons/Zone_Divisions.png" alt="">
                             <h3>Zone Divisions</h3>
                             <p>The state is divided into different zones. We have set exclusive routes for delivery in each zone. This helps to avoid confusion when there are a large number of orders.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-12 col-12">
+                    <div class="col-lg-4 col-md-12 col-12">
                         <div class="tele-sol-item my-4 text-center">
                             <img src="assets/icons/Instant_Notifications.png" alt="">
                             <h3>Instant Notifications</h3>
                             <p>Whenever an order gets placed, both the seller and the buyer get notified in their devices. The customer gets constant updates through notifications like when the order is dispatched, when the order is shipped,etc.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-12 col-12">
+                    <div class="col-lg-4 col-md-12 col-12">
                         <div class="tele-sol-item my-4 text-center">
                             <img src="assets/icons/Real-time_tracking.png" alt="">
                             <h3>Delivery Systems through Geo-fencing</h3>
                             <p>GPS and Geo-fencing help to find the most appropriate delivery systems nearby using geofending.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-12 col-12">
+                    <div class="col-lg-4 col-md-12 col-12">
                         <div class="tele-sol-item my-4 text-center">
                             <img src="assets/icons/Real-time_tracking.png" alt="">
                             <h3>Real-time tracking</h3>
                             <p>Our solutions help to track large and small items, and also manage data effectively.</p>
-                            <p>The user can track the product at anytime between placing the order and actual delivery using the GPS Tracking System</p>
-                            <p>The driver also gets real-time notifications every now and then about the customer, such as how far the customer’s home is from the driver’s location</p>
+                            <!-- <p>The user can track the product at anytime between placing the order and actual delivery using the GPS Tracking System</p>
+                            <p>The driver also gets real-time notifications every now and then about the customer, such as how far the customer’s home is from the driver’s location</p> -->
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-12 col-12">
+                    <div class="col-lg-4 col-md-12 col-12">
                         <div class="tele-sol-item my-4 text-center">
                             <img src="assets/icons/Instant_Delivery.png" alt="">
                             <h3>Instant Delivery</h3>
                             <p>Delivery of products as soon as possible</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-12 col-12">
+                    <div class="col-lg-4 col-md-12 col-12">
                         <div class="tele-sol-item my-4 text-center">
                             <img src="assets/icons/Scheduled_Delivery.png" alt="">
                             <h3>Scheduled Delivery</h3>
