--- a/business-listing-solution-utah.html
+++ b/business-listing-solution-utah.html
@@ -80,12 +80,187 @@
         
             <div class="banner-content text-start py-5 my-5">
             <div class="container">
-                <h1>WE PROVIDE THE BEST LOGISTICS</h1>
-                <h1>SOLUTIONS FOR VENDORS,</h1>
-                <h1>CUSTOMERS AND DELIVERY</h1>
+                <h1>WE COMMUNICATE YOUR BUSINESS</h1>
+                <h1>IN THE SMARTEST WAY POSSIBLE WITH</h1>
+                <h1>OUR BUSINESS LISTING SOLUTIONS</h1>
                 <a href="#" type="button" class="btn btn-outline-light mt-4 px-4 rounded-pill fw-medium text-uppercase d-lg-inline-block d-none">Start Discussion</a>
             </div>
         </div>
     </div>
 
     <!-- End Of Banner Section -->
+
+    <!-- Business Intelligency Solutions -->
+
+    <section class="lod-content my-4">
+        <div class="container">
+            <div class="row">
+                <div class="title-content">
+                    <h1>Catalogue Your Business Intelligently Through Our Business Listing Strategies</h1>
+                    <p class="mt-3">Quality business listing requires all business details to be appropriately communicated to the customer. Every business needs a software that is capable of portraying the entire business in a crisp and smart way. We provide the right software for business listing websites and mobile apps.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- End of Business Intelligency Solutions -->
+
+
+    <!-- Benefits From Solution Section -->
+
+    <section class="tele-sol">
+        <div class="container">
+            <h2 class="text-start text-capitalize position-relative d-inline-block decoration-line">Who Can Benefit From Our Solution?</h2>
+            <div class="row my-4">
+                <div class="col-lg-4 col-md-12 col-12">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/business-units.png" alt="">
+                        <h3>Business Units</h3>
+                        <p>Business units need to be exposed to more and more customers to earn profits and make the businesses grow. Through our solutions, we ensure noteworthy visibility of business details to the customers and assist in considerable expansion of the business.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-12">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/potential_customer.png" alt="">
+                        <h3>Potential Customers</h3>
+                        <p>We make sure that business listing websites are customer-centric so that the customer can seamlessly find out the required products or services.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-12">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/significant-business-visibility.png" alt="">
+                        <h3>We Ensure Significant Business Visibility</h3>
+                        <p>Our solution provides numerous options to strikingly put forward businesses in front of the customer with the most spectacular web designs.</p>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <ul class="benefits-list my-1">
+                        <li>We help your business listing website to be a major attention grabber for your business.</li>
+                        <li>There are multiple templates to choose from.</li>
+                        <li>There are attractive and professional fonts and paragraph styles.</li>
+                        <li> Websites come with soothing and striking color combinations.</li>
+                        <li>Businesses can be illustrated with pictures, animations, photographs and videos.</li>
+                        <li> Through business listing, we help to develop the brand image.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- End of Benefits From Solution Section -->
+
+
+    <!-- Benefits Content Section -->
+
+    <section class="benefits-content">
+        <div class="container">
+            <h2 class="text-start text-capitalize position-relative d-inline-block">Defining Every Business Aspect</h2>
+            <div class="row">
+                    <div class="col-lg-6 col-md-12 col-12">
+                        <p>Our business listing solution can assist in building websites and mobile apps with numerous business aspects such as:</p>
+                        <!-- <p>Blockchains help to provide a clearer and protected view of the transactions of individual customers.</p> -->
+                        <ul class="benefits-list my-1">
+                            <li>Business Name</li>
+                            <li>Phone Number</li>
+                            <li>Office Address</li>
+                            <li>Working Hours</li>
+                            <li>Main website URL</li>
+                            <li>Various categories of Services</li>
+                            <li>Privileges listing, etc.</li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-12">
+                        <h3>The Backend Client</h3>
+                        <p>The client at the backend can add business details to the websites as per the requirements. There is so much that the backend client can perform:</p>
+                        <ul class="benefits-list my-1">
+                            <li>See all the list of businesses</li>
+                            <li>Manage businesses</li>
+                            <li>Add, Edit, Block them</li>
+                            <li>Send bulk messages to all of them</li>
+                            <li>Manage subscription</li>
+                            <li>Check payments received from businesses through subscription, etc.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <!-- End Of Benefits Content Section -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Footer Section -->
+
+    <footer class="w-100 py-4 flex-shrink-0 footer-heading-links">
+        <div class="container py-4">
+            <div class="row">
+                <div class="col-lg-3 col-md-12 col-12 address-links text-lg-start text-center">
+                    <h3 class="text-uppercase">ADDRESS</h3>
+                    <h5>Appsbee U.S </h5>
+                    <p>3450 N. Triumph Blvd. Suite 102,Lehi Utah 84043</p>
+                    <h5>Appsbee Europe</h5>
+                    <p>Tarandės g. 34, Vilnius 14188, Lithuania</p>
+                    <h5>Appsbee India</h5>
+                    <p>Rishi Tech Park, Street No: 360, DH6/2, Newtown, Kolkata: 700156, India</p>
+                    <!-- <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Bootstrapious.com</a></p> -->
+                </div>
+                <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
+                    <h3>CASE STUDIES</h3>
+                    <ul class="list-unstyled case-links">
+                        <li><a href="#">Docsink</a></li>
+                        <li><a href="#">Amber Alert GPS</a></li>
+                        <li><a href="#">Kolkata Airport</a></li>
+                        <li><a href="#">Eptisa</a></li>
+                        <li><a href="#">Inkubate</a></li>
+                        <li><a href="#">Grid</a></li>
+                        <li><a href="#">Meri Jaan</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
+                    <h3>Company</h3>
+                    <ul class="list-unstyled company-links">
+                        <li><a href="#">Overview</a></li>
+                        <li><a href="#">Innovation</a></li>
+                        <li><a href="#">Management</a></li>
+                        <li><a href="#">Environment</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-12 col-12 text-lg-start text-center">
+                    <h3 class="float-lg-start"><a class="heading-link" href="#">CAREERS</a></h3>
+                    <h3 class="float-lg-end"><a class="heading-link" href="#">BLOG</a></h3>
+                    <h3 class="mt-lg-5 pt-lg-5">DOWNLOAD</h3>
+                    <p class="text-muted"><a class="text-black" href="#">CLIENT IDEAS SHEET</a></p>
+                </div>
+            </div>
+        </div>
+      </footer>
+      <!-- End Of Footer Section -->
+      <div class="footer-bottom bg-light py-3">
+        <div class="container">
+          <img class="w-auto me-3" src="assets/images/apps_img-footer.png"> 2009 - 2023 Appsbee. All Rights Reserved.
+        </div>
+      </div>
+  
+      <!--  Optional JavaScript -->
+      <script src="assets/js/jquery-3.6.3.min.js"></script>
+      <!-- Bootstrap Bundle Js -->
+      <script src="assets/js/bootstrap.bundle.min.js"></script>
+      <!-- carousel Js-->
+      <script src="assets/js/owl.carousel.min.js"></script>
+      <!-- Custom Js -->
+      <script src="assets/js/custom.js"></script>
+      
+  </body>
+  </html>
