--- a/business-listing-solution-utah.html
+++ b/business-listing-solution-utah.html
@@ -154,9 +154,10 @@
 
     <section class="benefits-content">
         <div class="container">
-            <h2 class="text-start text-capitalize position-relative d-inline-block">Defining Every Business Aspect</h2>
+            <!-- <h2 class="text-start text-capitalize position-relative d-inline-block">Defining Every Business Aspect</h2> -->
             <div class="row">
                     <div class="col-lg-6 col-md-12 col-12">
+                        <h3>Defining Every Business Aspect</h3>
                         <p>Our business listing solution can assist in building websites and mobile apps with numerous business aspects such as:</p>
                         <!-- <p>Blockchains help to provide a clearer and protected view of the transactions of individual customers.</p> -->
                         <ul class="benefits-list my-1">
